worked on fixing layout issues for homepage mainly in portfolio section

--- a/css/main.css
+++ b/css/main.css
@@ -271,7 +271,7 @@ select {
 
 .grid__container {
   display: grid;
-  grid-template-rows: [nav-start] 10vh [nav-end header-start] 90vh [header-end about-start] 100vh [about-end portfolio-start] 45vh [portfolio-end contact-start] 70vh [contact-end footer-start] 20vh [footer-end];
+  grid-template-rows: [nav-start] 10vh [nav-end header-start] 90vh [header-end about-start] 100vh [about-end portfolio-start] 70vh [portfolio-end contact-start] 70vh [contact-end footer-start] 20vh [footer-end];
   grid-template-columns: [full-start] minmax(0, 1fr) repeat(8, [col-start] minmax(min-content, 14rem) [col-end]) minmax(0, 1fr) [full-end]; }
   @media only screen and (max-width: 56.25em) {
     .grid__container {
@@ -302,18 +302,12 @@ select {
   justify-content: center; }
 
 .about__shape {
-  border-radius: 100px;
-  max-height: 100%;
-  max-width: 100%;
-  overflow: hidden;
-  border: 2px solid #5a2e13;
-  /* -webkit-clip-path: polygon(0% 0%, 75% 0%, 100% 50%, 75% 100%, 0% 100%);
-  clip-path: polygon(0% 0%, 75% 0%, 100% 50%, 75% 100%, 0% 100%); */ }
+  -webkit-clip-path: polygon(0% 15%, 15% 15%, 15% 0%, 85% 0%, 85% 15%, 100% 15%, 100% 85%, 85% 85%, 85% 100%, 15% 100%, 15% 85%, 0% 85%);
+  clip-path: polygon(0% 15%, 15% 15%, 15% 0%, 85% 0%, 85% 15%, 100% 15%, 100% 85%, 85% 85%, 85% 100%, 15% 100%, 15% 85%, 0% 85%); }
 
 .about__img {
-  object-fit: cover;
-  width: 100%;
-  height: 100%; }
+  height: 100%;
+  width: 100%; }
 
 .about__text-box {
   padding: 1.25rem;
@@ -401,6 +395,9 @@ select {
   grid-template-rows: [textboxrow-start] minmax(min-content, 50vh) [textboxrow-end linkboxrow-start] min-content [linkboxrow-end];
   grid-template-columns: minmax(0, 0.2fr) [portfoliocontentcol-start] minmax(0, 1fr) [portfoliocontentcol-end] minmax(0, 0.2fr);
   overflow: hidden; }
+
+.testimonial {
+  font-size: 3rem; }
 
 .portfolio__text-box {
   grid-column: portfoliocontentcol-start/portfoliocontentcol-end;
@@ -779,6 +776,9 @@ li {
   list-style: none;
   width: 100%; }
 
+#navigation__navheading {
+  color: white; }
+
 .navigation__navitem {
   margin: 1rem; }
 
@@ -871,6 +871,7 @@ li {
     object-fit: cover; }
   .hpanel__text-box {
     padding: 0.3rem;
+    font-size: 2rem;
     grid-row: row-start/row-end;
     grid-column: textbox-start/textbox-end;
     display: flex;
@@ -1022,5 +1023,7 @@ li {
     width: 60vw; }
   .projectpanel__media {
     margin: 1rem 0; }
-  .projectpanel__link-box a:not(:last-child) {
-    margin-right: 0.9rem; }
+  .projectpanel__link-box a {
+    margin-top: 0.9rem; }
+    .projectpanel__link-box a:not(:last-child) {
+      margin-right: 0.9rem; }
