--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -52,6 +52,7 @@
   }
   &__text-box {
     padding: 0.3rem;
+    font-size: 2rem;
     grid-row: row-start/row-end;
     grid-column: textbox-start/textbox-end;
     display: flex;
