--- a/sass/layout/_navigation.scss
+++ b/sass/layout/_navigation.scss
@@ -133,6 +133,9 @@
   width: 100%;
   // text-align: center;
 }
+#navigation__navheading {
+  color: white;
+}
 .navigation__navitem {
   margin: 1rem;
 }
