--- a/sass/layout/_ppheader.scss
+++ b/sass/layout/_ppheader.scss
@@ -18,6 +18,7 @@
   }
 
   &__link-box a {
+    margin-top: 0.9rem;
     &:not(:last-child) {
       margin-right: 0.9rem;
     }
