--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -3,7 +3,7 @@
 // ================================================
 .grid__container {
   display: grid;
-  grid-template-rows: [nav-start]10vh[nav-end header-start] 90vh [header-end about-start] 100vh [about-end portfolio-start]45vh [portfolio-end contact-start] 70vh [contact-end footer-start]20vh [footer-end];
+  grid-template-rows: [nav-start]10vh[nav-end header-start] 90vh [header-end about-start] 100vh [about-end portfolio-start]70vh [portfolio-end contact-start] 70vh [contact-end footer-start]20vh [footer-end];
   grid-template-columns:
     [full-start] minmax(0, 1fr) repeat(
       8,
@@ -71,18 +71,38 @@
   justify-content: center;
 }
 .about__shape {
-  border-radius: 100px;
-  max-height: 100%;
-  max-width: 100%;
-  overflow: hidden;
-  border: 2px solid $color-secondary-light;
-  /* -webkit-clip-path: polygon(0% 0%, 75% 0%, 100% 50%, 75% 100%, 0% 100%);
-  clip-path: polygon(0% 0%, 75% 0%, 100% 50%, 75% 100%, 0% 100%); */
+  -webkit-clip-path: polygon(
+    0% 15%,
+    15% 15%,
+    15% 0%,
+    85% 0%,
+    85% 15%,
+    100% 15%,
+    100% 85%,
+    85% 85%,
+    85% 100%,
+    15% 100%,
+    15% 85%,
+    0% 85%
+  );
+  clip-path: polygon(
+    0% 15%,
+    15% 15%,
+    15% 0%,
+    85% 0%,
+    85% 15%,
+    100% 15%,
+    100% 85%,
+    85% 85%,
+    85% 100%,
+    15% 100%,
+    15% 85%,
+    0% 85%
+  );
 }
 .about__img {
-  object-fit: cover;
-  width: 100%;
   height: 100%;
+  width: 100%;
 }
 .about__text-box {
   padding: 1.25rem;
@@ -124,11 +144,9 @@
     box-shadow: 0 0.5rem 1rem rgba($color-black, 0.15);
   }
 }
-
-//ABOUT RESPONSIVE DEFINITION BEGIN
+// ABOUT RESPONSIVE DEFINITION BEGIN
 @include respond(tab-land) {
 }
-
 @include respond(tab-port) {
   .section-about {
     display: flex;
@@ -155,7 +173,6 @@
     flex-direction: column;
   }
 }
-
 @include respond(phone) {
   .section-about {
     display: flex;
@@ -182,10 +199,9 @@
     flex-direction: column;
   }
 }
-////ABOUT RESPONSIVE DEFINITION END
-
+// //ABOUT RESPONSIVE DEFINITION END
 // ================================================
-// ABOUT SECTION BEGINS
+// ABOUT SECTION ENDS
 // ================================================
 // ================================================
 // PORTFOLIO SECTION BEGINS
@@ -200,6 +216,9 @@
     minmax(0, 0.2fr) [portfoliocontentcol-start]minmax(0, 1fr)
     [portfoliocontentcol-end] minmax(0, 0.2fr);
   overflow: hidden;
+}
+.testimonial {
+  font-size: 3rem;
 }
 .portfolio__text-box {
   grid-column: portfoliocontentcol-start/portfoliocontentcol-end;
@@ -225,26 +244,22 @@ li {
   display: inline-block;
   margin-right: 20rem;
 }
-
-//PORTFOLIO RESPONSIVE DEFINITION BEGIN
+// PORTFOLIO RESPONSIVE DEFINITION BEGIN
 @include respond(tab-land) {
 }
-
 @include respond(tab-port) {
   .section-portfolio {
     display: flex;
     flex-direction: column;
   }
 }
-
 @include respond(phone) {
   .section-portfolio {
     display: flex;
     flex-direction: column;
   }
 }
-////PORTFOLIO RESPONSIVE DEFINITION END
-
+// //PORTFOLIO RESPONSIVE DEFINITION END
 // ================================================
 // PORTFOLIO SECTION ENDS
 // ================================================
